# ComPath

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  create_and_build_container.sh  load_compath.sh  load_data.sh  requirements-rtfd.txt  requirements.txt  setup.cfg  setup.py  tox.ini
config/: config.ini
docs/: Makefile
docs/source/: cli.rst  conf.py  constants.rst  curation.rst  index.rst  license.rst  manager.rst  models.rst  repositories.rst  utils.rst  views.rst  visualization.rst  web.rst
notebooks/: Clustergrammer.ipynb  Cytoscape pathway similarity network.ipynb
src/compath/: __init__.py  __main__.py  analysis_service.py  cli.py  constants.py  curation_service.py  d3_dendrogram.py  forms.py  main_service.py  manager.py  model_views.py  models.py  pathme_ext.py  state.py  utils.py  web.py
src/compath/curation/: __init__.py  curation.py  hierarchies.py  parser.py  utils.py
src/compath/static/css/: clustergrammer.css  graph_explorer.css  legend.css  nav.css
src/compath/static/excel/: kegg_genesets.csv  reactome_genesets.csv
src/compath/static/js/: clustergrammer.js  graph_controller.js  mapping_landscape.js  overlap_controller.js  overview_controller.js  pathway_controller.js  pathway_knowledge_graph_controller.js  query.js
src/compath/static/json/: cy-style.json  kegg_clustergrammer.json  similarity_network.json  wikipathways_clustergrammer.json
src/compath/templates/: about.html  activity.html  base.html  curation.html  curation_protocol.html  footer.html  home.html  imprint.html  kegg_overlap.html  nav.html  overlap_matrix.html  overview.html  pathway_comparison_overview.html  pathway_distribution.html  pathway_overlap.html  query.html  reactome_overlap.html  similarity.html  similarity_network.html  terms_conditions.html  wikipathways_overlap.html
src/compath/templates/admin/: config.html  users.html
src/compath/templates/curation/: catalog.html  create_mapping.html
src/compath/templates/dependencies/: clustergrammer.html  clustergrammer_styles.html  common.html  cytoscape.html  datatables.html  slider.html  venn.html
src/compath/templates/meta/: about.html  imprint.html  nav.html  (+3 more)
src/compath/views/: __init__.py  analysis_service.py  api_service.py  curation_service.py  db_service.py  main_service.py  model_service.py  utils.py
src/compath/visualization/: __init__.py  cytoscape.py  d3_dendrogram.py  venn_diagram.py
tests/: __init__.py  constants.py  test_cascade.py  test_curation.py  test_mapping.py  test_models.py  test_utils.py  test_voting.py  test_web.py
(+115 files in other folders)
