##########################
# Setup.py Configuration #
##########################
[metadata]
name = compath
version = 0.1.3-dev
description = A web application for exploring and comparing the overlaps across pathway resources
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/compath/compath
download_url = https://github.com/compath/compath/releases
project_urls =
    Bug Tracker = https://github.com/compath/compath/issues
    Source Code = https://github.com/compath/compath

# Author information
author = Daniel Domingo-Fernández and Charles Tapley Hoyt
author_email = daniel.domingo.fernandez@scai.fraunhofer.de and cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Pathways
    Systems Biology

[options]
install_requires =
    click
    sqlalchemy
    bio2bel>=0.4.0
    wtforms
    flask_wtf
    flask
    flask-bootstrap
    flask_admin
    flask_security
    flask_sqlalchemy
    email_validator
    flasgger
    networkx
    pandas
    scipy
    tqdm
    numpy
    statsmodels
    xlrd
    pybel

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    compath = compath.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = compath
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/compath
    .tox/*/lib/python*/site-packages/compath

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
